@@ -1,3 +1,10 @@
+2002-03-12  Alex Graveley  <alex@ximian.com>
+
+	* src/soup-ssl-proxy/soup-openssl.c (soup_openssl_get_iochannel):
+	Loop on SSL_connect for some buggy versions of OpenSSL that still
+	return SSL_ERROR_WANT_READ/WRITE even for syncronous sockets.
+	Thanks to Chris Toshok for finding this.
+
 2002-03-11  Alex Graveley  <alex@ximian.com>
 
 	* configure.in, src/libsoup/soup-private.h: Bump development
